--- a/plugins/dominik/projects/updates/version.yaml
+++ b/plugins/dominik/projects/updates/version.yaml
@@ -15,3 +15,15 @@
 1.0.6:
     - 'Created table dominik_projects_buildings'
     - builder_table_create_dominik_projects_buildings.php
+1.0.7:
+    - 'Updated table dominik_projects_projects'
+    - builder_table_update_dominik_projects_projects_2.php
+1.0.8:
+    - 'Updated table dominik_projects_projects'
+    - builder_table_update_dominik_projects_projects_3.php
+1.0.9:
+    - 'Updated table dominik_projects_projects'
+    - builder_table_update_dominik_projects_projects_4.php
+1.0.10:
+    - 'Updated table dominik_projects_projects'
+    - builder_table_update_dominik_projects_projects_5.php
