--- a/plugins/dominik/projects/models/cells/fields.yaml
+++ b/plugins/dominik/projects/models/cells/fields.yaml
@@ -4,4 +4,24 @@ fields:
         oc.commentPosition: ''
         span: auto
         type: text
-   
+tabs:
+    fields:
+        buildings:
+            label: Lokale
+            oc.commentPosition: ''
+            nameFrom: notation
+            descriptionFrom: description
+            span: full
+            type: partial
+            path: fields_apartments
+            tab: Lokale
+        garages:
+            label: Lokale
+            oc.commentPosition: ''
+            nameFrom: notation
+            descriptionFrom: description
+            span: full
+            type: partial
+            path: fields_apartments
+            tab: Garaze
+        
